# solana-esp32-x402

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
components/base58/: CMakeLists.txt  base58.c  base58.h
components/solana_rpc/: CMakeLists.txt  solana_rpc.c  solana_rpc.h
components/solana_tx/: CMakeLists.txt  solana_tx.c  solana_tx.h
components/solana_wallet/: CMakeLists.txt  solana_wallet.c  solana_wallet.h
components/spl_token/: CMakeLists.txt  spl_token.c  spl_token.h
components/tweetnacl/: CMakeLists.txt  tweetnacl.c  tweetnacl.h  tweetnacl_esp32.c
components/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
components/x402_protocol/: CMakeLists.txt  x402_client.c  x402_client.h  x402_encoding.c  x402_encoding.h  x402_payment.c  x402_payment.h  x402_requirements.c  x402_requirements.h  x402_types.h
main/: CMakeLists.txt  idf_component.yml  main.c  test_keypair.h
